fixed scaling on Safari & iOS

--- a/src/components/weather/DailyForecast.css
+++ b/src/components/weather/DailyForecast.css
@@ -19,6 +19,7 @@
 
 .DayIcon {
   width: 75%;
+  height: 75%;
   align-self: center;
 }
 
